# Othello

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  othello.rst  tests.rst
docs/_build/doctrees/: conftest.doctree  environment.pickle  index.doctree  modules.doctree  othello.doctree  tests.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  conftest.html  genindex.html  index.html  modules.html  objects.inv  othello.html  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  othello.rst.txt  tests.rst.txt
docs/source/: conf.py
othello/: .gitignore  __init__.py  __main__.py  othello.py  pyproject.toml
othello/benchmarks/: baseline_times.json  benchmark_ai.py  benchmark_depth.py  benchmark_winrates.py  benchmarks.py  benchmarks_utils.py  experiment_baseline.py  experiment_heuristics.py  experiments.py  expermiment_minimax_vs_ab.py  run_experiments.py  visualize.py  visualize_results.py
othello/othello/: Interface.py  __init__.py  __main__.py  ai_features.py  bitboard.py  blitzTimer.py  blitz_mode.py  blitz_timer.py  board_parser.py  cli.py  command_parser.py  config.py  contest_mode.py  controllers.py  game_modes.py  gui.py  illegal_size_exception.py  logger.py  normal_game.py  normal_mode.py  othello.py  othello_bitboard.py  othello_board.py  othello_player.py  parser.py  player_abstraction.py  temp_config.py
othello/tests/: test_ai_features.py  test_ai_mode.py  test_bitboard.py  test_blitzTimer.py  test_blitz_mode.py  test_blitz_timer.py  test_board_parser.py  test_command_parser.py  test_config.py  test_controllers.py  test_gui_automationtesting.py  test_gui_unittesting.py  test_logger.py  test_main.py  test_normal_mode.py  test_othello_bitboard.py  test_othello_board.py  test_parser.py
reports/final/: bibliography.bib  report.tex
reports/preliminary/: bibliography.bib  report.tex  report1.tex
specs/: .gitignore  GanttChart.gantt
tests/: test_othello.py
