[project]
name = "othello"
description = "A great Othello Game"
requires-python = ">=3.7"
authors = [
    {name = "Matis Duval"},
    {name = "Lucas Marques"},
    {name = "Gabriel Tardiou"},
    {name = "Lucas Zammit"},
    {name = "Rémy Heuret"}
]
readme = "README.md"
dependencies = ["pycairo", "PyGObject", "importlib-metadata"]
dynamic=["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage"]
format = ["autopep8"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "othello.__version__"}

[tool.setuptools.packages.find]
exclude = ["specs", "reports"]

[pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=othello",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-branch",
]
testpaths = [
    "tests",
]

