[project]
name = "othello"
description = "A great Othello Game"
requires-python = ">=3.7"
authors = [
    {name = "Matis Duval"},
    {name = "Rémy Heuret"},
    {name = "Lucas Marques"},
    {name = "Gabriel Tardiou"},
    {name = "Lucas Zammit"}
]
readme = "README.md"
dependencies = ["pycairo", "PyGObject", "importlib-metadata",
                "sphinx", "sphinx_rtd_theme",
                "pytest", "pytest-cov", "coverage", "autopep8", "pre-commit"]
dynamic = ["version"]

[project.scripts]
othello = "othello.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "othello.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=othello",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-branch",
]
testpaths = [
    "tests",
]

